Changes since 2.9:
	- 'set' no longer allows setting non-existent variables
	- added db2 backend to distribution
	- added beginnings of ./configure autoconfiscation of mysql location
	- fixed very embarrassing bug in bind parser - would die on escaping a '
	- pipebackend back
	- freebsd fixes

Changes since 2.8:
	- license
	- cleanups from Erik Bos @ xs4all
	- build improvements from Wichert Akkerman
	- open sourcing 

changes since 2.7.1:
	- pipe backend now has 'pipe-regex'
	- pipe backend honours query-logging
	- axfr timeout could cause crashes when transferring  zone from
	  master
	- improved pipebackend documentation

changes since 2.6.1:
	- controlsocket now owned by the setgid gid
	- SOA could have the wrong TTL leading to double 
	  records on ANY queries ("Jonas Daugaard" <jonas@cube.dk>)
	- compression could suddenly be off Jonas Daugaard" <jonas@cube.dk>
	- added --mysql-table (Ian Newlands)
	- ranges work again (in allow-axfr-ips) (florus both)
	- pipebackend now has pipe-timeout feature (Steve Bromwich)
	- killed backends should respawn again (Steve Bromwich)
	- backtrace feature under Linux
	- corrupt packet error during axfr with secondary should not take
          down pdns (Mike+Simon)
	- >256 bytes compressed packet offsets did not function (Mike+Simon)


changes since 2.6:
	- repaired packetcache

Changes since 2.5.1:
	- removed 'unknown' packets from PacketCache
	- improved packet accounting so counters match up better
	- created ability to run with cache-ttl=0 and query-cache-ttl=0 
	  and negquery-cache-ttl=0
	- fixed silly bug with SOA cache with escaped dots
	- performance increases
	- @ hack in NS records for additional processing
	- only-soa feature
	- fixed very bad latency calculation error
	- now start out with an ANY query to catch CNAMEs and possibly first-level-NS
	- added 'cricket' to init.d script
	- made cache quicker
	- zone2sql now again can read Verisign generated COM/NET/ORG zones
	  $TTL in the middle of a record